2013-07-21  Behdad Esfahbod  <behdad@google.com>

	* src/ftcommon.c (FTDemo_Index_To_Bitmap): Add BGRA support.

2013-07-21  Werner Lemberg  <wl@gnu.org>

	* graph/rules.mk (GRAPH_H): Add missing files.

2013-07-21  Behdad Esfahbod  <behdad@google.com>

	* src/ftcommon.c (FTDemo_Index_To_Bitmap): Remove unneeded code.

2013-07-21  Behdad Esfahbod  <behdad@google.com>

	[graph] Fix BGRA blending.

	* graph/gblbgra.h: Simplify and correct blending operation.

2013-07-20  Werner Lemberg  <wl@gnu.org>

	Fix Savannah bug #39537.

	*/* s/FALSE/0/, s/TRUE/1/.

2013-07-20  Werner Lemberg  <wl@gnu.org>

	Improve font loading.

	In particular, avoid a crash in ftgrid for fonts without outlines.

	* src/ftcommon.c (FTDemo_Install_Font): Provide argument to load
	fonts with outlines only.
	* src/ftcommon.h, src/ftview.c, src/ftstring.c: Updated.
	* src/ftgrid.c (main): Updated.
	Emit warning message for skipped fonts.

2013-07-05  Werner Lemberg  <wl@gnu.org>

	[ftbench] Be more verbose in reporting results.

	* src/ftbench.c (benchmark): Indent trace output.
	(usage): Minor improvement.
	(main): Add some option value guards.
	Print information on test setup.

2013-07-02  Werner Lemberg  <wl@gnu.org>

	[ftbench] Improve `usage' text.

	* src/ftbench.c (default_hinting_engine,
	default_interpreter_version): New global variables.
	(usage): Improve text for `-H' and `-f'.
	(main): Updated.

2013-06-26  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Implement CFF and TTF engine change support.

	Key `H' toggles this.

	* src/ftgrid.c: Include FT_MODULE_H, FT_INTERNAL_OBJECTS_H,
	FT_INTERNAL_DRIVER_H, FT_CFF_DRIVER_H, and FT_TRUETYPE_DRIVER_H.
	(N_CFF_HINTING_ENGINES): Define macro.
	(GridStatusRec): Add `cff_hinting_engine' and
	`tt_interpreter_version'.
	(event_help): New layout similar to ftview.
	(event_cff_hinting_engine_change,
	event_tt_interpreter_version_change): New functions.
	(Process_Event): Extend handling of `H' key.
	(main): Get default properties of CFF and TTF drivers.
